[package]
name = "rustorrent"
version = "1.0.0"
authors = ["Alexander Sagen <alexander@sagen.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.0.1", features = ["std"] }
sha-1 = "0.9.2"
url = "2.2.0"
hex = "0.4.2"
clap = "2.33.3"
rand = "0.8.0"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["time"] }
hostname = "0.3.1"
rustls = "0.19.0"
webpki-roots = "0.21.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "fs", "net"] }
tokio-util = { version = "0.6.1", features = ["codec", "io", "net"] }
hyper = { version = "0.14.1", features = ["client", "server", "tcp", "stream", "http1"] }
hyper-rustls = { version = "0.22.1", features = ["webpki-tokio"] }
trust-dns-resolver = { version = "0.20.3", features = ["dns-over-https-rustls"] }
async-compression = { version = "0.3.7", default-features = false, features = ["tokio", "gzip"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
crossbeam-utils = "0.8"
crossbeam-queue = "0.3"